<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FormulasActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cashtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="Cash"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cashtv"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nContract"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="Informed by :\nThe helpful summary of contract law by Allen and Overy
for Advocates for International Development available
at nwww.a4id.org. This is based upon UK Law, but the
underlying concepts are likely to be transferrable to other
contexts.
 from discount percent
discount1D = (normalPrice1D) * (discountPercent1D/
100))
discountPrice1D = (normalPrice1D) - (normalPrice1D*
(discountPercent1 D / 100))
Discount from discount amount
discountPrice2D = (normal Price2D) - (discount2D)
discountPercent2D ((discount2D / (normalPrice2D)*
100))
Forecast
salesYearOneD=CalcFutureAmount(salesYearOneHeadD,
salesGrowth PercentD, 0.00)
salesYearTwoD=CalcFutureAmount(sales YearOneHeadD,
salesGrowth PercentD, 1.00)
salesYearThreeD=CalcFutureAmount(sales YearOneD," />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nDiscount from discount percent"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv5"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="discount1D = (normalPrice1D) * (discountPercent1D/
100))
discountPrice1D = (normalPrice1D) - (normalPrice1D*
(discountPercent1 D / 100))\n" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv6"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nDiscount from discount amount"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv7"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="discountPrice2D = (normal Price2D) - (discount2D)
discountPercent2D ((discount2D / (normalPrice2D)*
100))" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv8"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nForecast"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv9"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkForcast1" />

        <TextView
            android:id="@+id/tv11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv10"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nLoan"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv11"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkLoan" />

        <TextView
            android:id="@+id/tv13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv12"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nMargin"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv13"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkMargin" />

        <TextView
            android:id="@+id/tv15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv14"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nMarket"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv15"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="There are no simple heuristics that guarantee success,\neither from academic research or experience. The sources\nbelow were helpful, but some of the nuances in the\nacademic literature had to be attenuated in order to provide
a practical algorithm:\n
Leitner, K. and Guldenberg,S. (2010) Generic strategies and
firm performance in SMEs: a longitudinal study of Austrian
SMEs, Small Business Economics, 35(2), 169-189
Lester, D.L., Parnell, J.A., Crandall, W.R. and Menefee,
M.L. (2008) Organzational life cycle and performance
among high and low performers, International Journal of
Commerce and Management, 18(4), 313-330
Nandakumar,M.K., Ghobadian, A. and O Regan, N. (2011)
Generic strategies and performance evidence from
manufacturing firms, International Journal of Productivity
and Performance Management, 60(3), 222-251
Parnell, J.A., Long, Z. and Lester, D. (2015) Competitive
strategy, capabilities and uncertainty in small and medium
sized enterprises (SMEs) in China and the United States,
Management Decision, 53(2), 402-431.\nPelham, A. M. (2000) Market orientation and other potential
influences on performance in small and medium-sized
manufacturing firms, Journal of Small Business
Management, 38(1), 48-67.\nPorter, M.E. (1980) Competitive Strategy, New York, Free
Press\nPorter, M.E. (1985) Competitive Advantage, New York, Free
Press
Savrul, M., Ineckara, A and Sener, S. (2014) The potential
of e-commerce for SMEs in a globalizing business
environment, Procedia Social and Behavioual Sciences, 150,
35-45\nWatkin, D. G. (1986) Toward a competitive advantage: A
focus strategy for mall retailers, Journal of Small Business
Management, 24(1), 9-16." />

        <TextView
            android:id="@+id/tv17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv16"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nMarkup"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv17"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkMarkup" />

        <TextView
            android:id="@+id/tv19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv18"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nProfit"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv19"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkProfit" />

        <TextView
            android:id="@+id/tv21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv20"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nSales"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv21"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkSales" />


        <TextView
            android:id="@+id/tv23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv22"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nVAT from Net Price"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv23"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/hyperlinkVatFromNetPrice" />

        <TextView
            android:id="@+id/tv25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv24"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="\nVAT from Gross price"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv25"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/hyperlinkVATfromGrossprice" />
    </RelativeLayout>
</ScrollView>
</RelativeLayout>